kubernetes/openkm.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openkm-deployment
  labels:
    app: openkm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: openkm
  template:
    metadata:
      labels:
        app: openkm
    spec:
      containers: 
      - name: openkm
        image: 101digital/openkm:ce
        #image: openkm/openkm-ce:latest
        imagePullPolicy: Always  
        ports:
        - containerPort: 8080
        # command: [ "wait-for-it.sh", "localhost:3306", "--timeout=0", "--strict", "--", "entrypoint.sh" ]
        volumeMounts:
        - mountPath: "/opt/openkm/repository"
          name: openkm-repo-pv-storage
        # - mountPath: "/opt/openkm/repository/scans"
          # name: openkm-scans-nfs-storage
      - name: openkm-mariadb
        image: mariadb:latest
        args:
         - "--character-set-server=utf8"
         - "--collation-server=utf8_general_ci"
         - "--character_set_server=utf8"
         - "--collation_server=utf8_general_ci"
        ports:
        - containerPort: 3306
        volumeMounts:
        - mountPath: "/var/lib/mysql"
          name: openkm-db-pv-storage
      volumes:
      - name: openkm-repo-pv-storage
        persistentVolumeClaim:
         claimName: openkm-repo-pv-claim
      - name: openkm-db-pv-storage
        persistentVolumeClaim:
         claimName: openkm-db-pv-claim
      # - name: openkm-scans-nfs-storage
        # persistentVolumeClaim:
         # claimName: openkm-scans-nfs-claim
