kubernetes/openkm-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: openkm
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  rules:
  - host: openkm1.101digital.io
    http:
      paths:
      - path: /
        backend:
          serviceName: openkm
          servicePort: 8080
