kubernetes/openkm-network-policy.yaml
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  name: openkm-np
  namespace: default
spec:
  policyTypes:
  - Ingress
  podSelector:
    matchLabels:
      app: openkm
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: wso2
    ports:
    - protocol: TCP
      port: 8080
